--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -33,7 +33,8 @@
     </section>
 
     <!-- Form -->
-    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" [ngClass]="{formB : formToggle}" (window:resize)="onResize($event)">
+    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" [ngClass]="{formB : formToggle}"
+      (window:resize)="onResize($event)">
       <div class="container">
         <div class="row justify-content-center">
 
@@ -58,8 +59,8 @@
                         <i class="fas fa-user"></i>Nome Completo</div>
                     </div>
                     <!-- desktop -->
-                    <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname"
-                      formControlName="fullname" name="fullname" required>
+                    <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname" formControlName="fullname"
+                      name="fullname" required>
 
                     <!-- mobile -->
                     <i class="fas fa-user mobile mobile-icon"></i>
@@ -104,10 +105,10 @@
                     <input type="email" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
                       (blur)="checkEmail()" formControlName="email" name="email" email required>
 
-                      <!-- mobile -->
-                      <i class="fas fa-envelope mobile-icon mobile"></i>
-                      <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email"
-                      (blur)="checkEmail()" formControlName="email" name="email" email required>
+                    <!-- mobile -->
+                    <i class="fas fa-envelope mobile-icon mobile"></i>
+                    <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email" (blur)="checkEmail()" formControlName="email"
+                      name="email" email required>
                     <div class="valid-feedback" *ngIf="!invalidEmail">
                       <i class="fa fa-check"></i>
                     </div>
@@ -128,7 +129,7 @@
 
                     <i class="fas fa-gift mobile mobile-icon"></i>
                     <input class="form-control p-inputMask gv" id="inputDatadeNascimento" formControlName="birthdate" (blur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
-                    [(ngModel)]="user.birthdate" name="birthdate" mask="00/00/0000"/>
+                      [(ngModel)]="user.birthdate" name="birthdate" mask="00/00/0000" />
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -155,8 +156,8 @@
 
                     <!-- mobile -->
                     <i class="fas fa-lock mobile mobile-icon"></i>
-                    <input type="password" class="form-control mobile" placeholder="Senha" [(ngModel)]="user.password"
-                      formControlName="password" name="password" required>
+                    <input type="password" class="form-control mobile" placeholder="Senha" [(ngModel)]="user.password" formControlName="password"
+                      name="password" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -174,8 +175,8 @@
 
                     <!-- mobile -->
                     <i class="fas fa-lock mobile mobile-icon"></i>
-                    <input type="password" class="form-control mobile" [(ngModel)]="user.repassword" formControlName="repassword"
-                      name="repassword" required placeholder="Confirmar senha">
+                    <input type="password" class="form-control mobile" [(ngModel)]="user.repassword" formControlName="repassword" name="repassword"
+                      required placeholder="Confirmar senha">
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -196,8 +197,7 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
-                <div>
-                  <div class="form-group" [ngClass]="{'autocomplete-negative-index2': autocompleteIsOpen}">
+                  <div class="form-group local_committee" (click)="selectInput('local_committee')">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -205,7 +205,10 @@
                       </div>
                       <div class="dropdown">
                         <div class="styled-select">
-                          <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)" #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick(); placesAutocomplete.isOpen = true;" dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!" (onBlur)="placesAutocomplete.isOpen = false;"></p-autoComplete>
+                          <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
+                            #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick();"
+                            dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado"
+                            placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
                         </div>
                       </div>
                     </div>
@@ -213,7 +216,7 @@
                       Selecione a AIESEC mais próxima.
                     </div>
                   </div>
-                  <div class="form-group" [ngClass]="{'autocomplete-negative-index': !scholarityAutocomplete.isOpen}">
+                  <div class="form-group scholarity" (click)="selectInput('scholarity')">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -221,7 +224,9 @@
                       </div>
                       <div class="dropdown">
                         <div class="styled-select">
-                          <p-autoComplete [(ngModel)]="user.scholarity" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)" #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick(); scholarityAutocomplete.isOpen = true; autocompleteIsOpen = true;" (onBlur)="autocompleteIsOpen = false; scholarityAutocomplete.isOpen = false;" dropdownMode="current" field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?" ></p-autoComplete>
+                          <p-autoComplete [(ngModel)]="user.scholarity" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
+                            #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick();" dropdownMode="current"
+                            field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
                         </div>
                       </div>
                     </div>
@@ -230,7 +235,7 @@
                     </div>
                   </div>
                   <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6" class="animated fadeIn faster">
-                    <div class="form-group" [ngClass]="{'autocomplete-negative-index': !universityAutocomplete.isOpen}">
+                    <div class="form-group  university" (click)="selectInput('university')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
@@ -238,7 +243,10 @@
                         </div>
                         <div class="dropdown">
                           <div class="styled-select">
-                            <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)" #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick(); universityAutocomplete.isOpen = true; autocompleteIsOpen = true;" dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="Onde você estuda?" (onBlur)="autocompleteIsOpen = false; universityAutocomplete.isOpen = false;"></p-autoComplete>
+                            <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)"
+                              #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick();"
+                              dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado"
+                              placeholder="Onde você estuda?"></p-autoComplete>
                           </div>
                         </div>
                       </div>
@@ -246,7 +254,7 @@
                         Selecione uma universidade.
                       </div>
                     </div>
-                    <div class="form-group" [ngClass]="{'autocomplete-negative-index': !coursesAutocomplete.isOpen}">
+                    <div class="form-group college_course"  (click)="selectInput('college_course')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
@@ -254,7 +262,10 @@
                         </div>
                         <div class="dropdown">
                           <div class="styled-select">
-                            <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)" #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick(); coursesAutocomplete.isOpen = true; autocompleteIsOpen = true;" dropdownMode="current" field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado" placeholder="Insira seu curso"  (onBlur)="autocompleteIsOpen = false; coursesAutocomplete.isOpen = false;"></p-autoComplete>
+                            <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
+                              #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick();"
+                              dropdownMode="current" field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado"
+                              placeholder="Insira seu curso"></p-autoComplete>
                           </div>
                         </div>
                       </div>
@@ -276,13 +287,12 @@
                       </label>
                     </div>
                   </div>
-                </div>
               </form>
             </div>
 
             <section class="content" id="resultado" *ngIf="completedSignup">
               <script type="text/javascript">
-               fbq('track', 'Lead');
+                fbq('track', 'Lead');
               </script>
               <div class="container">
                 <div class="row justify-content-center">
@@ -315,7 +325,8 @@
                 <button type="button" class="btn btn-secondary" data-toggle="modal" (click)="cancelSignUp()" data-target="#modalCancelar1">{{formedUser || submittedPersonal ? 'Voltar' : 'Cancelar'}}</button>
               </div>
               <div class="col text-right">
-                <button type="button" (click)="registerUser()" class="btn btn-primary" *ngIf="personalData" [disabled]='step1Form.invalid || (!matchDate || invalidEmail)' [ngx-scroll-to]="'#form'">Próximo</button>
+                <button type="button" (click)="registerUser()" class="btn btn-primary" *ngIf="personalData" [disabled]='step1Form.invalid || (!matchDate || invalidEmail)'
+                  [ngx-scroll-to]="'#form'">Próximo</button>
                 <button type="button" (click)="submit()" class="btn btn-primary submit-form" *ngIf="studyData" [ngx-scroll-to]="'#form'"
                   [disabled]='unableToSubmit()'>
                   Enviar
@@ -329,6 +340,6 @@
     </section>
     <div class='loading-landing-page' *ngIf="loading">
       <div class="loading-animation loading-animation-gv"></div>
-    </div>    
+    </div>
   </div>
 </div>
