--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -209,6 +209,7 @@
                             #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick();"
                             dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado"
                             placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
+                            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                         </div>
                       </div>
                     </div>
@@ -224,9 +225,10 @@
                       </div>
                       <div class="dropdown">
                         <div class="styled-select">
-                          <p-autoComplete [(ngModel)]="user.scholarity" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
+                          <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
                             #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
+                            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"  *ngIf="user.scholarity"></i>
                         </div>
                       </div>
                     </div>
@@ -247,6 +249,7 @@
                               #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick();"
                               dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado"
                               placeholder="Onde você estuda?"></p-autoComplete>
+                              <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"  *ngIf="user.university"></i>
                           </div>
                         </div>
                       </div>
@@ -266,6 +269,7 @@
                               #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick();"
                               dropdownMode="current" field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado"
                               placeholder="Insira seu curso"></p-autoComplete>
+                              <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')"  *ngIf="user.college_course"></i>
                           </div>
                         </div>
                       </div>
