--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1708,3 +1708,9 @@ label {
     z-index: -1;
     position: relative;
 }
+
+.autocomplete-clear-btn {
+    position: absolute; 
+    right: 0; 
+    top: 15px;
+}
