--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1520,3 +1520,9 @@ label {
     z-index: -1;
     position: relative;
 }
+
+.autocomplete-clear-btn {
+    position: absolute; 
+    right: 0; 
+    top: 15px;
+}
