--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -210,6 +210,7 @@
                         <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
                           #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick();" dropdownMode="current"
                           field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
+                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                       </div>
                     </div>
                   </div>
@@ -225,9 +226,10 @@
                     </div>
                     <div class="dropdown">
                       <div class="styled-select">
-                        <p-autoComplete [(ngModel)]="user.scholarity" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
+                        <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
                           #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
                           field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
+                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"  *ngIf="user.scholarity"></i>
                       </div>
                     </div>
                   </div>
@@ -247,6 +249,7 @@
                           <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)"
                             #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="Onde você estuda?"></p-autoComplete>
+                            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"  *ngIf="user.university"></i>
                         </div>
                       </div>
                     </div>
@@ -265,6 +268,7 @@
                           <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
                             #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado" placeholder="Insira seu curso"></p-autoComplete>
+                            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')"  *ngIf="user.college_course"></i>
                         </div>
                       </div>
                     </div>
@@ -284,6 +288,7 @@
                         <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
                           #englishAutocomplete (onFocus)="englishAutocomplete.handleDropdownClick();" dropdownMode="current"
                           field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="Isso nos ajuda a te direcionar para as vagas mais adequadas"></p-autoComplete>
+                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('english_level')"  *ngIf="user.english_level"></i>
                       </div>
                     </div>
                   </div>
