--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -2,17 +2,17 @@
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
 <div id="step1" class="form-talentos-globais" [ngClass]="{'full-screen': formedUser}">
-  <div>
+  <div class="full-width">
     <!-- Header -->
     <section class="header" id="header-talentos-globais">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" *ngIf="!embeddedForm">
           <div class="col-sm text-center">
             <div class="logo-talentos-globais"></div>
           </div>
         </div>
         <div *ngIf="!completedSignup">
-          <div class="row">
+          <div class="row" *ngIf="!embeddedForm">
             <div class="col-sm">
               <h1>Vivencie a realidade de uma empresa internacional, desenvolva suas habilidades e traga o mundo para o seu currículo.</h1>
             </div>
