--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -3,17 +3,17 @@
 </head>
 
 <div id="step1" class="form-volutario-global relative-form" [ngClass]="{'full-screen': formedUser}">
-  <div>
+  <div class="full-width">
     <!-- Header -->
     <section class="header" id="header-voluntario-global">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" *ngIf="!embeddedForm">
           <div class="col-sm text-center">
             <div class="logo-voluntario-global"></div>
           </div>
         </div>
         <div *ngIf="!completedSignup">
-          <div class="row" [ngClass]="{ headerB: formToggle }">
+          <div class="row" [ngClass]="{ headerB: formToggle }" *ngIf="!embeddedForm">
             <div class="col-sm">
               <h1>Ser um voluntário global é transformar seus valores em ação e fazer a diferença em diversas regiões do mundo.</h1>
             </div>
