--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -274,6 +274,10 @@ footer {
     .partners.padding-top-and-bottom {
         padding: 100px 0 0 0 !important
     }
+    .footer-copyright {
+        width: 80%;
+        margin: auto;
+    }
 }
 
 @media only screen and (min-width: 390px) {
