--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1526,3 +1526,9 @@ label {
     right: 0; 
     top: 15px;
 }
+@media (min-width: 1440px){
+    div.form-talentos-globais {
+        transform: scale(1.3);
+        margin: 15vh 0;
+    }
+}
