--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1714,3 +1714,10 @@ label {
     right: 0; 
     top: 15px;
 }
+
+@media (min-width: 1440px){
+    div.form-volutario-global {
+        transform: scale(1.3);
+        margin: 15vh 0;
+    }
+}
