--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -202,9 +202,7 @@
     <div id="meet-our-programs-session-bg"></div>
     <div class="col-sm align-center meet-our-programs-content padding">
       <p class="align-center margin">
-        O modelo de desenvolvimento de liderança da
-        <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam e os torna capazes de fazer a
-        <strong>diferença</strong> todos os dias.
+          O modelo de desenvolvimento de liderança da <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam <br> e os torna capazes de fazer a <strong>diferença</strong> todos os dias.
       </p>
       <button type="button" class="btn btn-light" (click)="scrollToGlobal()">Conheça nossos programas</button>
     </div>
@@ -213,9 +211,11 @@
   <section class="padding-top-and-bottom experiences-session">
     <div class="container">
       <div class="row">
-        <h1 class="italic centered">
-          Em uma experiência com a AIESEC você vai...
-        </h1>
+        <div class="col-12">
+          <h1 class="italic centered">
+            Em uma experiência com a AIESEC você vai...
+          </h1>
+        </div>
 
         <div class="col-lg-7 col-sm-12 col-md-12 align-left">
           <ul>
@@ -250,7 +250,7 @@
       </div>
     </div>
   </section>
-    <div id="our-stories">
+  <div id="our-stories">
     <div id="our-stories-bg"></div>
     <section class="container padding align-center our-stories">
       <h1 class='italic centered'>As nossas histórias</h1>
@@ -258,7 +258,8 @@
       <div class="row">
 
         <div class="col-sm swipe-area">
-          <div class='swipe-animation' [style.touch-action]="'pan-y'" (mouseenter)="stopAnimation()" (tap)='redirectTo()' (mouseleave)="sliderAnimation()" (swiperight)="swipe('right')" (swipeleft)="swipe('left')"></div>
+          <div class='swipe-animation' [style.touch-action]="'pan-y'" (mouseenter)="stopAnimation()" (tap)='redirectTo()' (mouseleave)="sliderAnimation()"
+            (swiperight)="swipe('right')" (swipeleft)="swipe('left')"></div>
           <div class="footer-carousel-btn-left">
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
