--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1528,7 +1528,9 @@ label {
 }
 @media (min-width: 1440px){
     div.form-talentos-globais {
-        transform: scale(1.3);
-        margin: 15vh 0;
+        &:not(.full-screen){
+            transform: scale(1.3);
+            margin: 15vh 0;
+        }
     }
 }
