--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1730,7 +1730,9 @@ label {
 
 @media (min-width: 1440px){
     div.form-talentos-globais {
-        transform: scale(1.35);
-        margin: 15vh 0;
+        &:not(.full-screen){
+            transform: scale(1.3);
+            margin: 15vh 0;
+        }
     }
 }
