--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1717,7 +1717,9 @@ label {
 
 @media (min-width: 1440px){
     div.form-volutario-global {
-        transform: scale(1.3);
-        margin: 15vh 0;
+        &:not(.full-screen){
+            transform: scale(1.3);
+            margin: 15vh 0;
+        }
     }
 }
